module 1 and README update 2021

--- a/refs.bib
+++ b/refs.bib
@@ -94,49 +94,16 @@
   year     =  2014
 }
 
- @Manual{markdown1,
-    title = {rmarkdown: Dynamic Documents for R},
-    author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-    year = {2019},
-    note = {R package version 1.16},
-    url = {https://github.com/rstudio/rmarkdown},
-  }
-  
-@Book{markdown2,
-    title = {R Markdown: The Definitive Guide},
-    author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
-    publisher = {Chapman and Hall/CRC},
-    address = {Boca Raton, Florida},
-    year = {2018},
-    note = {ISBN 9781138359338},
-    url = {https://bookdown.org/yihui/rmarkdown},
-  }
-  
-  @Manual{kableExtra,
-    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
-    author = {Hao Zhu},
-    year = {2019},
-    note = {R package version 1.1.0},
-    url = {https://CRAN.R-project.org/package=kableExtra},
-  }
 
- @Manual{R-core,
+@Manual{R-core,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2019},
+    year = {2021},
     url = {https://www.R-project.org/},
   }
 
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2018},
-  url = {https://www.R-project.org/}
-}
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the 'Tidyverse'},
@@ -144,14 +111,6 @@
   year = {2017},
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
-}
-
-@Manual{R-magrittr,
-  title = {magrittr: A Forward-Pipe Operator for R},
-  author = {Stefan Milton Bache and Hadley Wickham},
-  year = {2014},
-  note = {R package version 1.5},
-  url = {https://CRAN.R-project.org/package=magrittr},
 }
 
 @Manual{R-here,
@@ -199,13 +158,14 @@
     url = {https://CRAN.R-project.org/package=haven},
   }
   
-  @Manual{bryan_zhao,
-    title = {googlesheets: Manage Google Spreadsheets from R},
-    author = {Jennifer Bryan and Joanna Zhao},
-    year = {2018},
+@Manual{googlesheets4,
+    title = {googlesheets4: Access Google Sheets using the Sheets API V4},
+    author = {Jennifer Bryan},
+    year = {2021},
     note = {R package version 0.3.0},
-    url = {https://CRAN.R-project.org/package=googlesheets},
+    url = {https://CRAN.R-project.org/package=googlesheets4},
   }
+
 
 
 @ARTICLE{Wilson2014-ij,
@@ -376,4 +336,312 @@
     year = {2016},
     note = {ISBN 978-1138700109},
     url = {https://github.com/rstudio/bookdown},
+  }
+  @ARTICLE{Wilkinson2016-pu,
+  title    = "The {FAIR} Guiding Principles for scientific data management and
+              stewardship",
+  author   = "Wilkinson, Mark D and Dumontier, Michel and Aalbersberg, I
+              Jsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak,
+              Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva
+              Santos, Luiz Bonino and Bourne, Philip E and Bouwman, Jildau and
+              Brookes, Anthony J and Clark, Tim and Crosas, Merc{\`e} and
+              Dillo, Ingrid and Dumon, Olivier and Edmunds, Scott and Evelo,
+              Chris T and Finkers, Richard and Gonzalez-Beltran, Alejandra and
+              Gray, Alasdair J G and Groth, Paul and Goble, Carole and Grethe,
+              Jeffrey S and Heringa, Jaap and 't Hoen, Peter A C and Hooft, Rob
+              and Kuhn, Tobias and Kok, Ruben and Kok, Joost and Lusher, Scott
+              J and Martone, Maryann E and Mons, Albert and Packer, Abel L and
+              Persson, Bengt and Rocca-Serra, Philippe and Roos, Marco and van
+              Schaik, Rene and Sansone, Susanna-Assunta and Schultes, Erik and
+              Sengstag, Thierry and Slater, Ted and Strawn, George and Swertz,
+              Morris A and Thompson, Mark and van der Lei, Johan and van
+              Mulligen, Erik and Velterop, Jan and Waagmeester, Andra and
+              Wittenburg, Peter and Wolstencroft, Katherine and Zhao, Jun and
+              Mons, Barend",
+  abstract = "There is an urgent need to improve the infrastructure supporting
+              the reuse of scholarly data. A diverse set of
+              stakeholders-representing academia, industry, funding agencies,
+              and scholarly publishers-have come together to design and jointly
+              endorse a concise and measureable set of principles that we refer
+              to as the FAIR Data Principles. The intent is that these may act
+              as a guideline for those wishing to enhance the reusability of
+              their data holdings. Distinct from peer initiatives that focus on
+              the human scholar, the FAIR Principles put specific emphasis on
+              enhancing the ability of machines to automatically find and use
+              the data, in addition to supporting its reuse by individuals.
+              This Comment is the first formal publication of the FAIR
+              Principles, and includes the rationale behind them, and some
+              exemplar implementations in the community.",
+  journal  = "Sci Data",
+  volume   =  3,
+  pages    = "160018",
+  month    =  mar,
+  year     =  2016,
+  language = "en"
+}
+@ARTICLE{Goodman2016-tl,
+  title    = "What does research reproducibility mean?",
+  author   = "Goodman, Steven N and Fanelli, Daniele and Ioannidis, John P A",
+  abstract = "The language and conceptual framework of ``research
+              reproducibility'' are nonstandard and unsettled across the
+              sciences. In this Perspective, we review an array of explicit and
+              implicit definitions of reproducibility and related terminology,
+              and discuss how to avoid potential misunderstandings when these
+              terms are used as a surrogate for ``truth.''",
+  journal  = "Sci. Transl. Med.",
+  volume   =  8,
+  number   =  341,
+  pages    = "341ps12",
+  month    =  jun,
+  year     =  2016,
+  language = "en"
+}
+
+@TECHREPORT{K_Bollen2015-un,
+  title       = "Social, Behavioral, and Economic Sciences Perspectives on
+                 Robust and Reliable Science",
+  author      = "Bollen, K and Cacioppo, J T and Kaplan, J and Krosnick, J
+                 and Olds, J L",
+  institution = "National Science Foundation",
+  year        =  2015
+}
+
+
+@TECHREPORT{OECD_Global_Science_Forum2020-cp,
+  title       = "Building digital workforce capacity and skills for
+                 data-intensive science",
+  author      = "{OECD Global Science Forum}",
+  institution = "OECD",
+  month       =  jun,
+  year        =  2020
+}
+
+@ARTICLE{Markowetz2015,
+  title    = "Five selfish reasons to work reproducibly",
+  author   = "Markowetz, Florian",
+  abstract = "And so, my fellow scientists: ask not what you can do for
+              reproducibility; ask what reproducibility can do for you! Here, I
+              present five reasons why working reproducibly pays off in the
+              long run and is in the self-interest of every ambitious,
+              career-oriented scientist.",
+  journal  = "Genome Biol.",
+  volume   =  16,
+  pages    = "274",
+  month    =  dec,
+  year     =  2015,
+  language = "en"
+}
+
+
+@BOOK{National_Academies_of_Sciences_Engineering2019-sb,
+  title     = "Understanding Reproducibility and Replicability",
+  author    = "{National Academies of Sciences, Engineering} and {Medicine} and
+               {Policy} and Affairs, Global and {Committee on Science,
+               Engineering, Medicine} and {Public Policy} and {Board on
+               Research Data} and {Information} and {Division on Engineering}
+               and {Physical Sciences} and {Committee on Applied} and
+               Statistics, Theoretical and {Board on Mathematical Sciences} and
+               {Analytics} and {Division on Earth} and {Life Studies} and
+               {Nuclear} and {Radiation Studies Board} and {Division of
+               Behavioral} and {Social Sciences} and {Education} and {Committee
+               on National Statistics} and {Board on Behavioral, Cognitive} and
+               {Sensory Sciences} and {Committee on Reproducibility} and
+               {Replicability}",
+  abstract  = "Scientific research has evolved from an activity mainly
+               undertaken by individuals operating in a few locations to many
+               teams, large communities, and complex organizations involving
+               hundreds to thousands of individuals worldwide. In the 17th
+               century, scientists would communicate through letters and were
+               able to understand and assimilate major developments across all
+               the emerging major disciplines. In 2016---the most recent year
+               for which data are available---more than 2,295,000 scientific
+               and engineering research articles were published worldwide
+               (National Science Foundation, 2018e). In addition, the number of
+               scientific and engineering fields and subfields of research is
+               large and has greatly expanded in recent years, especially in
+               fields that intersect disciplines (e.g., biophysics); more than
+               230 distinct fields and subfields can now be identified. The
+               published literature is so voluminous and specialized that some
+               researchers look to information retrieval, machine learning, and
+               artificial intelligence techniques to track and apprehend the
+               important work in their own fields.",
+  publisher = "National Academies Press (US)",
+  month     =  may,
+  year      =  2019
+}
+
+
+@ARTICLE{Baggerly2009-pw,
+  title     = "{DERIVING} {CHEMOSENSITIVITY} {FROM} {CELL} {LINES}: {FORENSIC}
+               {BIOINFORMATICS} {AND} {REPRODUCIBLE} {RESEARCH} {IN}
+               {HIGH-THROUGHPUT} {BIOLOGY}",
+  author    = "Baggerly, Keith A and Coombes, Kevin R",
+  abstract  = "[High-throughput biological assays such as microarrays let us
+               ask very detailed questions about how diseases operate, and
+               promise to let us personalize therapy. Data processing, however,
+               is often not described well enough to allow for exact
+               reproduction of the results, leading to exercises in ``forensic
+               bioinformatics'' where aspects of raw data and reported results
+               are used to infer what methods must have been employed.
+               Unfortunately, poor documentation can shift from an
+               inconvenience to an active danger when it obscures not just
+               methods but errors. In this report we examine several related
+               papers purporting to use microarray-based signatures of drug
+               sensitivity derived from cell lines to predict patient response.
+               Patients in clinical trials are currently being allocated to
+               treatment arms on the basis of these results. However, we show
+               in five case studies that the results incorporate several simple
+               errors that may be putting patients at risk. One theme that
+               emerges is that the most common errors are simple (e.g., row or
+               column offsets); conversely, it is our experience that the most
+               simple errors are common. We then discuss steps we are taking to
+               avoid such errors in our own investigations.]",
+  journal   = "Ann. Appl. Stat.",
+  publisher = "Institute of Mathematical Statistics",
+  volume    =  3,
+  number    =  4,
+  pages     = "1309--1334",
+  year      =  2009
+}
+
+  @Manual{R-tidybulk,
+    title = {tidybulk: Brings transcriptomics to the tidyverse},
+    author = {Stefano Mangiola},
+    year = {2020},
+    url  = {https://bioconductor.org/packages/release/bioc/html/tidybulk.html},
+    note = {R package version 1.0.2},
+  }
+    @Manual{R-biobroom,
+    title = {biobroom: Turn Bioconductor objects into tidy data frames},
+    author = {Andrew J. Bass and David G. Robinson and Steve Lianoglou and Emily Nelson and John D. Storey and with contributions from Laurent Gatto},
+    year = {2020},
+    note = {R package version 1.20.0},
+    url = {https://github.com/StoreyLab/biobroom},
+  }
+  
+@ARTICLE{Wickham-style,
+  title    = "The tidyverse style guide",
+  author   = "Wickham, Hadley",
+  howpublished = "\url{https://style.tidyverse.org/}",
+  note         = "Accessed: 2020-10-30"
+}
+
+@ARTICLE{Knuth1984-ly,
+  title     = "Literate Programming",
+  author    = "Knuth, D E",
+  abstract  = "Abstract. The author and his associates have been experimenting
+               for the past several years with a programming language and
+               documentation system called WEB. Thi",
+  journal   = "Comput. J.",
+  publisher = "Oxford Academic",
+  volume    =  27,
+  number    =  2,
+  pages     = "97--111",
+  month     =  jan,
+  year      =  1984
+}
+  @Manual{gt,
+    title = {gt: Easily Create Presentation-Ready Display Tables},
+    author = {Richard Iannone and Joe Cheng and Barret Schloerke},
+    year = {2020},
+    note = {R package version 0.2.2},
+    url = {https://CRAN.R-project.org/package=gt},
+  }
+  
+@Book{rmarkdown_cookbook,
+    title = {R Markdown Cookbook},
+    author = {Yihui Xie, Christophe Dervieux and Emily Riederer},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2020},
+    note = {"ISBN 9780367563837"},
+    url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+  }
+  
+@Manual{palmerpenguins,
+    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
+    year = {2020},
+    note = {R package version 0.1.0},
+    url = {https://allisonhorst.github.io/palmerpenguins/},
+  }
+
+@article{Gorman2014,
+    author = {Kristen B Gorman and Tony D Williams and William R Fraser},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Ecological Sexual Dimorphism and Environmental Variability within a Community of Antarctic Penguins (Genus Pygoscelis)},
+    year = {2014},
+    month = {03},
+    volume = {9},
+    url = {https://doi.org/10.1371/journal.pone.0090081},
+    pages = {1-14},
+    abstract = {Background Sexual segregation in vertebrate foraging niche is often associated with sexual size dimorphism (SSD), i.e., ecological sexual dimorphism. Although foraging behavior of male and female seabirds can vary markedly, differences in isotopic (carbon, δ13C and nitrogen, δ15N) foraging niche are generally more pronounced within sexually dimorphic species and during phases when competition for food is greater. We examined ecological sexual dimorphism among sympatric nesting Pygoscelis penguins asking whether environmental variability is associated with differences in male and female pre-breeding foraging niche. We predicted that all Pygoscelis species would forage sex-specifically, and that higher quality winter habitat, i.e., higher or lower sea ice coverage for a given species, would be associated with a more similar foraging niche among the sexes.  Results P2/P8 primers reliably amplified DNA of all species. On average, male Pygoscelis penguins are structurally larger than female conspecifics. However, chinstrap penguins were more sexually dimorphic in culmen and flipper features than Adélie and gentoo penguins. Adélies and gentoos were more sexually dimorphic in body mass than chinstraps. Only male and female chinstraps and gentoos occupied separate δ15N foraging niches. Strong year effects in δ15N signatures were documented for all three species, however, only for Adélies, did yearly variation in δ15N signatures tightly correlate with winter sea ice conditions. There was no evidence that variation in sex-specific foraging niche interacted with yearly winter habitat quality.  Conclusion Chinstraps were most sexually size dimorphic followed by gentoos and Adélies. Pre-breeding sex-specific foraging niche was associated with overall SSD indices across species; male chinstrap and gentoo penguins were enriched in δ15N relative to females. Our results highlight previously unknown trophic pathways that link Pygoscelis penguins with variation in Southern Ocean sea ice suggesting that each sex within a species should respond similarly in pre-breeding trophic foraging to changes in future winter habitat.},
+    number = {3},
+    doi = {10.1371/journal.pone.0090081}
+}
+
+
+@ARTICLE{Andrews2018-cy,
+  title    = "Identifying cell populations with {scRNASeq}",
+  author   = "Andrews, Tallulah S and Hemberg, Martin",
+  abstract = "Single-cell RNASeq (scRNASeq) has emerged as a powerful method
+              for quantifying the transcriptome of individual cells. However,
+              the data from scRNASeq experiments is often both noisy and high
+              dimensional, making the computational analysis non-trivial. Here
+              we provide an overview of different experimental protocols and
+              the most popular methods for facilitating the computational
+              analysis. We focus on approaches for identifying biologically
+              important genes, projecting data into lower dimensions and
+              clustering data into putative cell-populations. Finally we
+              discuss approaches to validation and biological interpretation of
+              the identified cell-types or cell-states.",
+  journal  = "Mol. Aspects Med.",
+  volume   =  59,
+  pages    = "114--122",
+  month    =  feb,
+  year     =  2018,
+  language = "en"
+}
+
+  @Manual{caret,
+    title = {caret: Classification and Regression Training},
+    author = {Max Kuhn},
+    year = {2020},
+    note = {R package version 6.0-86},
+    url = {https://CRAN.R-project.org/package=caret},
+ }   
+
+@Book{venables_ripley,
+    title = {Modern Applied Statistics with S},
+    author = {W. N. Venables and B. D. Ripley},
+    publisher = {Springer},
+    edition = {Fourth},
+    address = {New York},
+    year = {2002},
+    note = {ISBN 0-387-95457-0},
+    url = {http://www.stats.ox.ac.uk/pub/MASS4/},
+  }
+  
+    @Manual{GGally,
+    title = {GGally: Extension to 'ggplot2'},
+    author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+    year = {2020},
+    note = {R package version 2.0.0},
+    url = {https://CRAN.R-project.org/package=GGally},
+  }
+
+@Manual{Tidymodels,
+    title = {Tidymodels: a collection of packages for modeling and machine learning using tidyverse principles.},
+    author = {Max Kuhn and Hadley Wickham},
+    url = {https://www.tidymodels.org},
+    year = {2020},
+  }
+
+@Manual{xaringanExtra,
+    title = {xaringanExtra: Extras And Extensions for Xaringan Slides},
+    author = {Garrick Aden-Buie},
+    year = {2020},
+    note = {R package version 0.2.3.9000},
+    url = {https://github.com/gadenbuie/xaringanExtra},
   }
